--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.55.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
